--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "@reduxjs/toolkit": "^2.0.1",
     "react-redux": "^9.0.4",
     "redux-persist": "^6.0.0",
